[tool.poetry]
name = "pypoeninja"
version = "0.0.1"
description = "Python library for accessing PoE.Ninja data"
authors = ["SteelPh0enix <steelphoenix2137@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
mypy = "^0.991"
types-requests = "^2.28.11.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
coverage = "^6.5.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
