[tool.poetry]
name = "pypoeninja"
version = "0.0.1"
description = "Python library for accessing PoE.Ninja data"
authors = ["SteelPh0enix <steelphoenix2137@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SteelPh0enix/pyPoENinja/"
keywords = ["poeninja", "path", "of", "exile", "poe", "ninja", "api"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
dacite = "^1.8.1"
requests-cache = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
types-requests = "^2.31.0.2"
isort = "^5.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.2"
coverage = "^7.3.0"
sphinx-rtd-theme = "^1.2.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
