[tool.poetry]
name = "pypoeninja"
version = "0.0.1"
description = "Python library for accessing PoE.Ninja data"
authors = ["SteelPh0enix <steelphoenix2137@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SteelPh0enix/pyPoENinja/"
keywords = ["poeninja", "path", "of", "exile", "poe", "ninja", "api"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
requests-cache = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
types-requests = "^2.31.0.2"
ruff = "^0.1.9"
pylint = "^3.0.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.2"
coverage = "^7.3.0"
sphinx-rtd-theme = "^1.2.2"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
show_error_codes = true

[tool.ruff]
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "C",    # mccabe
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "EM",   # flake8-errmsg
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "INT",  # flake8-gettext
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint checks
    "FLY",  # flynt, static-join-to-f-string
    "PERF", # perflint
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101", # ignore assert warnings
]

[tool.ruff.pylint]
max-args = 6

[tool.pylint.main]
max-line-length = 100
jobs = 0 # auto-detects the amount of available threads to run in parallel
fail-under = '10.0' # we do not allow subpar quality code here
suggestion-mode = 'yes'
max-args = 6
load-plugins = '''pylint.extensions.code_style,
pylint.extensions.comparison_placement,
pylint.extensions.confusing_elif,
pylint.extensions.for_any_all,
pylint.extensions.consider_refactoring_into_while_condition,
pylint.extensions.consider_ternary_expression,
pylint.extensions.mccabe,
pylint.extensions.docstyle,
pylint.extensions.check_elif,
pylint.extensions.empty_comment,
pylint.extensions.eq_without_hash,
pylint.extensions.private_import,
pylint.extensions.redefined_variable_type,
pylint.extensions.no_self_use,
pylint.extensions.overlapping_exceptions,
pylint.extensions.redefined_loop_name,
pylint.extensions.typing,
'''

[tool.pylint.messages]
enable = 'all'
disable = '''use-implicit-booleaness-not-comparison-to-zero,
missing-function-docstring,
too-many-instance-attributes,
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
